syntax = "proto3";


message ServerConfig {
  // The collection of External WioLinks
  map<string, WioLinkConfig> wioLinks = 1;
  repeated ArduinoConfig arduinos = 2;
}

message WioLinkConfig {
	string name = 1;
	string rootUrl = 2;
	string apiKey = 3;
	repeated GroveSensor sensors = 4;
}

message GroveSensor {
	string apiMethod = 1;
}

message ArduinoConfig {
	string comPort = 1;
	int32 baudRate = 2;
}
